Make maintenance windows close without the console, and act on the review
An adversarial review of the previous commit found that the timed maintenance
window was only enforced while its screen was composed. A technician could open
a four-hour break-glass window, press back, and DISALLOW_DEBUGGING_FEATURES
would stay cleared indefinitely because nothing was left running to notice the
deadline. That is the opposite of what the feature is for.

Enforcement is now independent of the UI:

- MaintenanceGuard arms an exact JobScheduler job at the deadline, keeps a
  fifteen-minute sweep while anything is open or owed, and PolicyRefreshReceiver
  calls it on every boot and package replacement. All paths converge on the same
  MaintenanceCoordinator.refresh, so the rules stay in one tested place.
- The intent to relax is written to disk before the first DevicePolicyManager
  call, not after the window is persisted. A crash in that gap previously left a
  device relaxed with nothing on disk saying so; now the next pass finds a
  restore owed and re-applies the base policy.
- Maintenance passes queue on the same single policy thread as reconciliation,
  and LockdownPolicyController resolves its effective choices through
  MaintenancePlan when a window is live. A reboot or package install during an
  open window no longer silently re-asserts what the window had cleared.
- The maintenance report is written to SystemPolicyStore, so the system policy
  console stops rendering a stale verified "applied" for a control maintenance
  has just withdrawn.

Also from the review:

- Stream.toList() requires API 34 and this app supports API 26. Four files used
  it, including SystemPolicyReport.faults(), which the apply path calls on every
  pass — it would have thrown NoSuchMethodError on every device below Android
  14. Replaced with Collectors.toList(). Lint now passes with zero errors.
- Reconciliation outcomes are persisted (ReconciliationRecord) instead of only
  logged, so the heal